--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -89,11 +89,11 @@
             {
                 <tr>
                     <td>@Html.Label(item.Name)</td>
-                    <td><input type="checkbox" name="Permissions" value=" " /></td>
-                    <td><input type="checkbox" name="Permissions" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Id" /></td>
-                    <td><input type="checkbox" name="Permissions" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="View").Id" /></td>
-                    <td><input type="checkbox" name="Permissions" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Edit").Id" /></td>
-                    <td><input type="checkbox" name="Permissions" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Delete").Id" /></td>
+                    <td><input type="checkbox" name="Permissions1" value=" " /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Id" /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="View").Id" /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Edit").Id" /></td>
+                    <td><input type="checkbox" name="Permissions1" value="@item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Delete").Id" /></td>
 
                     @*<td>@Html.CheckBox(item.Permissions.FirstOrDefault(c=> c.SetOfPermissionId == item.Id && c.Type=="Create").Name,true)</td>
                     <td>@Html.CheckBox(item.Permissions.FirstOrDefault(c => c.SetOfPermissionId == item.Id && c.Type == "View").Name)</td>
