--- a/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Users/Sections/BankAccounts.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OctagonPlatform.Models.FormsViewModels.UserBAViewModel>
+﻿@model  OctagonPlatform.Models.FormsViewModels.UserBAViewModel
 
 <table class="table">
     <tr>
@@ -20,7 +20,7 @@
         <th></th>
     </tr>
     <tbody id="listOfBA">
-        @foreach (var item in Model)
+        @foreach (var item  in Model.BankAccounts)
         {
             <tr>
                 <td>
@@ -44,13 +44,13 @@
                         if (ViewBag.assigned == false)
                         {
                             <div>
-                                @Ajax.ActionLink("attach", "AddBA", "Users", new {bankAccountId = item.Id }, new AjaxOptions { UpdateTargetId = "addBankAccounts", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" }, htmlAttributes: new { @class = "btn", data_target = "#BankAccounts" })
+                                @Ajax.ActionLink("Attach", "Attach", "Users", new { bankAccountId = item.Id, userId = Model.UserId }, new AjaxOptions { UpdateTargetId = "addBankAccounts", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#BankAccounts" })
                             </div>
                         }
                         else
                         {
                             <div>
-                                @Ajax.ActionLink("de-attach", "AddBA", "Users", new { bankAccountId = item.Id }, new AjaxOptions { UpdateTargetId = "addBankAccounts", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#addBankAccounts" })
+                                @Ajax.ActionLink("De-Attach", "DeAttach", "Users", new { bankAccountId = item.Id, userId = Model.UserId }, new AjaxOptions { UpdateTargetId = "addBankAccounts", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#addBankAccounts" })
                             </div>
                         }
                     }
@@ -58,7 +58,6 @@
                 </td>
 
             </tr>
-        }
+                        }
     </tbody>
 </table>
-
