--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -60,7 +60,7 @@
         <th>Status</th>
     </tr>
     </thead>
-    <tbody id ="listOfPartners">
+    <tbody>
         <tr>
             <td>@Model.BusinessName</td>
             <td>@Model.Parent.BusinessName</td>
@@ -79,17 +79,17 @@
         {
             if (!item.Deleted && item.Id != Model.Id)
             {
-                <tr class="info">
+                <tr>
                     <td>@item.BusinessName</td>
                     <td>@item.Parent.BusinessName</td>
                     <td>@item.Address1</td>
                     <td>@item.Mobile</td>
                     <td>@item.Email</td>
                     <td>@item.Status</td>
-                    <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-                    <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                    <td><i class="fa fa-pencil"></i>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
+                    <td><i class="fa fa-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = item.Id})
                     </td>
-                    <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink("Details", "Details", new {id = item.Id})</td>
+                    <td><i class="fa fa-list"></i>@Html.ActionLink("Details", "Details", new {id = item.Id})</td>
 
 
                 </tr>
