--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -76,12 +76,12 @@
                 <td>@item.State.Name</td>
                 <td>@item.Status</td>
                 <td>@item.Balance</td>
-                <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
+                <td><i class="fa fa-pencil"></i>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</td>
                 <td>
-                    <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    <i class="fa fa-trash"></i>@Html.ActionLink("Delete", "Delete", new { id = item.Id })
                                                                  
                 </td>
-                <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink("Details", "Details", new { id = item.Id })</td>
+                <td><i class="fa fa-trash"></i>@Html.ActionLink("Details", "Details", new { id = item.Id })</td>
             </tr>
         }
         </tbody>
