--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -47,7 +47,7 @@
         <strong>@ViewBag.Error</strong>
     </div>
     
-    <table id="terminals" class="table table-hover table-striped table-condensed">
+    <table id="terminals" class="cell-border">
     <thead>
         <tr>
             <th>Terminal ID</th>
