--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -50,16 +50,20 @@
     <table id="terminals" class="cell-border">
     <thead>
         <tr>
-            <th>Terminal ID</th>
+            <th>ID</th>
             <th>Partner</th>
-            <th>Location Type</th>
+            <th>Location</th>
             <th>Address</th>
             <th>Phone</th>
             <th>Country</th>
             <th>City</th>
             <th>State</th>
             <th>Status</th>
-            <th>Cash Balance</th>
+            <th>Balance</th>
+            <th>Edit</th>
+            <th>Delete</th>
+            <th>Details</th>
+
         </tr>
     </thead>
     
