--- a/OctagonPlatform/Views/Error/BadGatewayError.cshtml
+++ b/OctagonPlatform/Views/Error/BadGatewayError.cshtml
@@ -2,14 +2,12 @@
     ViewBag.Title = "BadGatewayError";
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
-
 <div class="container" style="text-align: center; padding-bottom: 20px; padding-top: 20px"></div>
-<div class="form-group">
-    <h1>502</h1>
-    <h2>Bad Gateway.</h2>
+<div class="form-group" style="margin-top: 10px;">
+    <h1 style="text-align:center;font-size: 102px;">Bad Gateway...!</h1>
+    <div style="margin-left: 288px;"><img src="~/Octagon/assets/img/404.jpg" /></div>
     <h2 class="alert-danger">@ViewBag.Error </h2>
 </div>
-<div class="form-group">
-    <button type="reset" onclick="history.back();" class="btn btn-default" style="background-color:red">Back</button>
+<div class="form-group" style="text-align: center;">
+    <button type="reset" onclick="history.back();" class="btn btn-default" style="background-color:#00a8e1; color: white;">Home page</button>
 </div>
-
