--- a/OctagonPlatform/Views/VaultCash/Index.cshtml
+++ b/OctagonPlatform/Views/VaultCash/Index.cshtml
@@ -1,39 +1,39 @@
 ﻿@model OctagonPlatform.Models.VaultCash
+    
+@{
+    Layout = "~/Views/Shared/_LayoutEdits.cshtml";
+}
+
 @if (Model == null)
 {
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        @Html.ActionLink(
-                            linkText: "Add VaultCash",
-                            actionName: "Create",
-                            controllerName: "VaultCash",
-                            routeValues: new
-                            {
-                                terminalId = ViewBag.TerminalId
-                            },
-                            htmlAttributes: null
-                            )
-                    </li>
-                </ul>
-
-            </div>
-
-        </div>
-    </nav>
+    <div class="col-md-6" style="margin-top: 20px; margin-bottom: 20px">
+        @Html.ActionLink(
+            linkText: "Add VaultCash",
+            actionName: "Create",
+            controllerName: "VaultCash",
+            routeValues: new
+            {
+                terminalId = ViewBag.TerminalId
+            },
+            htmlAttributes: null
+            )
+    </div>
 }
-<p class="alert alert-info">
-    <strong>@ViewBag.Error</strong>
-</p>
-<table class="table table-striped table-hover ">
-    <thead>
+
+@*<p class="alert alert-info">
+        <strong>@ViewBag.Error</strong>
+    </p>
+*@
+
+<table id="vaultcash" class="table table-striped table-hover table-bordered">
+    <thead class="thead-blue">
     <tr>
-        <th>BankAccount</th>
-        <th>BankName</th>
+        <th>Bank Acc</th>
+        <th>Bank Name</th>
         <th>Effective Date</th>
         <th>Stop Date</th>
+     @*   <th>Edit</th>
+    <th>Delete</th> *@
     </tr>
     </thead>
     @if (Model != null)
@@ -44,45 +44,58 @@
             <td>@Model.BankAccount.BankName</td>
             <td>@Model.StartDate.ToShortDateString()</td>
             <td>@Model.StopDate.ToShortDateString()</td>
-            <td>
-                <i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
-                                                            linkText: "Edit",
-                                                            actionName: "Edit",
-                                                            controllerName: "VaultCash",
-                                                            routeValues: new
-                                                            {
-                                                                id = Model.Id
-                                                            },
-                                                            htmlAttributes: null
-                                                            )
-            </td>
-            <td>
-                <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
-                                                             linkText: "Delete",
-                                                             actionName: "Delete",
-                                                             controllerName: "VaultCash",
-                                                             routeValues: new
-                                                             {
-                                                                 id = Model.Id
-                                                             },
-                                                             htmlAttributes: null
-                                                             )
-            </td>
-            <td>
-                <i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
-                                                                linkText: "Details",
-                                                                actionName: "Details",
-                                                                controllerName: "VaultCash",
-                                                                routeValues: new
-                                                                {
-                                                                    id = Model.Id
-                                                                },
-                                                                htmlAttributes: null
-                                                                )
-            </td>
+         @*   <td>
+        <i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                    linkText: "Edit",
+                                                    actionName: "Edit",
+                                                    controllerName: "VaultCash",
+                                                    routeValues: new
+                                                    {
+                                                        id = Model.Id
+                                                    },
+                                                    htmlAttributes: null
+                                                    )
+    </td>
+    <td>
+        <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                     linkText: "Delete",
+                                                     actionName: "Delete",
+                                                     controllerName: "VaultCash",
+                                                     routeValues: new
+                                                     {
+                                                         id = Model.Id
+                                                     },
+                                                     htmlAttributes: null
+                                                     )
+    </td>
+    <td>
+        <i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                        linkText: "Details",
+                                                        actionName: "Details",
+                                                        controllerName: "VaultCash",
+                                                        routeValues: new
+                                                        {
+                                                            id = Model.Id
+                                                        },
+                                                        htmlAttributes: null
+                                                        )
+    </td> *@
         </tr>
         </tbody>
     }
 </table>
 
 
+@section Scripts {
+    @Scripts.Render("~/bundles/search")
+    @Scripts.Render("~/Scripts/jquery-1.10.2.js")
+
+    <script>
+
+        var jQuery_1_10_2 = $.noConflict(true);
+
+        jQuery_1_10_2(function() {
+            $("#vaultcash").DataTable();
+        });
+    </script>
+}
